--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -8,15 +8,9 @@ ARG fromImage=ubuntu:22.04
 FROM $fromImage
 
 ARG INSTALLER_ARGS=""
-ARG fromImage
-
+RUN echo $INSTALLER_ARGS
 COPY DependencyInstaller.sh /tmp/.
-
+RUN echo $INSTALLER_ARGS
 RUN /tmp/DependencyInstaller.sh -base
 RUN /tmp/DependencyInstaller.sh -common $INSTALLER_ARGS
-
-RUN echo "$fromImage" | grep -q "ubuntu" && \
-    strip --remove-section=.note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so || \
-    echo "Skipping strip command as fromImage does not contain 'ubuntu'"
-    
 RUN rm -f /tmp/DependencyInstaller.sh
