--- a/src/dpl/CMakeLists.txt
+++ b/src/dpl/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(dpl_lib
   src/dbToOpendp.cpp
   src/Grid.cpp
   src/CheckPlacement.cpp
+  src/Objects.cpp
   src/Padding.cpp
   src/Place.cpp
   src/FillerPlacement.cpp
