Move all AbcFactory APIs over to dbSta
This sets us up to deal with more libraries, and overall
better integrates with OpenROAD.

Signed-off-by: Ethan Mahintorabi <ethanmoon@google.com>

--- a/src/dbSta/src/CMakeLists.txt
+++ b/src/dbSta/src/CMakeLists.txt
@@ -50,9 +50,10 @@ target_include_directories(dbSta_lib
 
 
 target_link_libraries(dbSta_lib
-  PRIVATE
-    OpenSTA
+  PUBLIC
     odb
+    OpenSTA
+  PRIVATE
     utl_lib
 )
 
