meta: Attempts to fix apple + filesystem
Signed-off-by: Ethan Mahintorabi <ethanmoon@google.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,10 @@ configure_file(
 
 ################################################################
 
-link_libraries(stdc++fs)
+if (NOT APPLE)
+  link_libraries(stdc++fs)
+endif()
+
 # Ask CMake to output a compile_commands.json file for use with things like clang-tidy
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
