--- a/src/rmp/test/CMakeLists.txt
+++ b/src/rmp/test/CMakeLists.txt
@@ -17,4 +17,6 @@ foreach(TEST_NAME IN LISTS TEST_NAMES)
     or_integration_test("rmp" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
 
-add_subdirectory(cpp)
+if (ENABLE_TESTS)
+    add_subdirectory(cpp)
+endif()
