Fix issue with linking dependency of -lstdc++fs when using flatpak
When using recent versions of GCC, flatpak creates an error when linking
against stdc++fs. It should be kept for GCC versions < 9.1 but not for
more recent versions.

Signed-off-by: Sébastien <sebastien.resimont@voxelsensors.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,8 @@ configure_file(
 
 ################################################################
 
-if (NOT APPLE)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9.1")
+  MESSAGE(STATUS "Older version of GCC detected. Linking against stdc++fs")
   link_libraries(stdc++fs)
 endif()
 
