--- a/src/rsz/src/CMakeLists.txt
+++ b/src/rsz/src/CMakeLists.txt
@@ -52,6 +52,7 @@ add_library(rsz_lib
     SteinerTree.cc
     EstimateWireParasitics.cc
     Resizer.cc
+    RemoveBuffer.cc
 )
 
 target_sources(rsz
