ord: build sta with tclreadline when built with openroad
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -255,6 +255,10 @@ add_subdirectory(ifp)
 add_subdirectory(pad)
 add_subdirectory(odb)
 if (NOT USE_SYSTEM_OPENSTA)
+  if (TCL_READLINE_LIBRARY AND TCL_READLINE_H)
+    # Pass along tcl readline enablement to OpenSTA build
+    set(USE_TCL_READLINE ON)
+  endif()
   add_subdirectory(sta)
 endif()
 add_subdirectory(dbSta)
