--- a/src/odb/test/cpp/CMakeLists.txt
+++ b/src/odb/test/cpp/CMakeLists.txt
@@ -13,6 +13,7 @@ set(TEST_LIBS
         Boost::boost
         utl_lib
         odb_test_helper
+        gdsin
 )
 
 add_executable(OdbGTests TestDbWire.cc TestAbstractLef.cc)
@@ -27,6 +28,7 @@ add_executable(TestAccessPoint TestAccessPoint.cpp)
 add_executable(TestGuide TestGuide.cpp)
 add_executable(TestNetTrack TestNetTrack.cpp)
 add_executable(TestMaster TestMaster.cpp)
+add_executable(TestGDSIn TestGDSIn.cpp)
 
 target_link_libraries(OdbGTests odb gtest gmock gtest_main)
 target_link_libraries(TestCallBacks ${TEST_LIBS})
@@ -40,6 +42,7 @@ target_link_libraries(TestAccessPoint ${TEST_LIBS})
 target_link_libraries(TestGuide ${TEST_LIBS})
 target_link_libraries(TestNetTrack ${TEST_LIBS})
 target_link_libraries(TestMaster ${TEST_LIBS})
+target_link_libraries(TestGDSIn ${TEST_LIBS})
 
 # FAILING TARGETS
 # add_test(NAME TestLef58Properties COMMAND TestLef58Properties)
