--- a/src/odb/test/cpp/CMakeLists.txt
+++ b/src/odb/test/cpp/CMakeLists.txt
@@ -42,7 +42,7 @@ target_link_libraries(TestAccessPoint ${TEST_LIBS})
 target_link_libraries(TestGuide ${TEST_LIBS})
 target_link_libraries(TestNetTrack ${TEST_LIBS})
 target_link_libraries(TestMaster ${TEST_LIBS})
-target_link_libraries(TestGDSIn ${TEST_LIBS})
+target_link_libraries(TestGDSIn gdsin)
 
 # FAILING TARGETS
 # add_test(NAME TestLef58Properties COMMAND TestLef58Properties)
