--- a/.github/workflows/github-actions-test-installer.yml
+++ b/.github/workflows/github-actions-test-installer.yml
@@ -1,17 +1,17 @@
 name: Test DependencyInstaller script
 on:
   schedule:
-  - cron: "0 8 * * SUN"
+    - cron: "0 8 * * SUN"
   push:
     paths:
-      - 'etc/DependencyInstaller.sh'
-      - 'docker/*'
-      - '.github/workflows/github-actions-test-installer.yml'
+      - "etc/DependencyInstaller.sh"
+      - "docker/*"
+      - ".github/workflows/github-actions-test-installer.yml"
   pull_request:
     paths:
-      - 'etc/DependencyInstaller.sh'
-      - 'docker/*'
-      - '.github/workflows/github-actions-test-installer.yml'
+      - "etc/DependencyInstaller.sh"
+      - "docker/*"
+      - ".github/workflows/github-actions-test-installer.yml"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -20,7 +20,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu20.04", "ubuntu22.04", "centos7", "rhel", "debian10", "debian11", "opensuse"]
+        os:
+          [
+            "ubuntu20.04",
+            "ubuntu22.04",
+            "rhel",
+            "debian10",
+            "debian11",
+            "opensuse",
+          ]
         args: ["", "-local", "-no_eqy", "-no_eqy -local"]
         compilers: ["gcc", "clang"]
         exclude:
