--- a/src/ant/src/CMakeLists.txt
+++ b/src/ant/src/CMakeLists.txt
@@ -31,6 +31,8 @@
 
 include("openroad")
 
+find_package(OpenMP REQUIRED)
+
 swig_lib(NAME      ant
          NAMESPACE ant
          I_FILE    AntennaChecker.i
@@ -39,6 +41,7 @@ swig_lib(NAME      ant
 
 add_library(ant_lib
     AntennaChecker.cc
+    DSU.cc
     Polygon.cc
 )
 
@@ -57,6 +60,7 @@ target_link_libraries(ant_lib
     odb
     OpenSTA
     utl_lib
+    OpenMP::OpenMP_CXX
 )
 
 target_link_libraries(ant
@@ -64,6 +68,7 @@ target_link_libraries(ant
     ant_lib
     grt_lib
     utl
+    OpenMP::OpenMP_CXX
 )
 
 messages(
