--- a/src/dbSta/test/CMakeLists.txt
+++ b/src/dbSta/test/CMakeLists.txt
@@ -42,5 +42,5 @@ set(TEST_NAMES
 )
 
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-  or_integration_test("ant" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+  or_integration_test("dbSta" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
