--- a/src/mpl2/test/cpp/helper/CMakeLists.txt
+++ b/src/mpl2/test/cpp/helper/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(openroad)
 
-add_library(mpl2_odb_helper helper.cpp env.cpp)
+add_library(mpl2_odb_helper helper.cpp)
 
 target_link_libraries(mpl2_odb_helper
   PRIVATE
