mpl2: Refactor mpl2_odb_helper
Signed-off-by: Emmanuella Rumanti <amuritna@gmail.com>

--- a/src/mpl2/test/cpp/helper/CMakeLists.txt
+++ b/src/mpl2/test/cpp/helper/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(mpl2_odb_helper helper.cpp)
 
 target_link_libraries(mpl2_odb_helper
   PRIVATE
-    odb
+    mpl2_lib
 )
 
 target_include_directories(mpl2_odb_helper
