text, box, and node

--- a/src/odb/src/db/CMakeLists.txt
+++ b/src/odb/src/db/CMakeLists.txt
@@ -89,10 +89,13 @@ add_library(db
     dbDft.cpp
     dbGCellGrid.cpp
     dbGDSBoundary.cpp
+    dbGDSBox.cpp
     dbGDSElement.cpp
+    dbGDSNode.cpp
     dbGDSPath.cpp
     dbGDSSRef.cpp
     dbGDSStructure.cpp
+    dbGDSText.cpp
     dbGlobalConnect.cpp
     dbGroup.cpp
     dbGuide.cpp
