mpl2: create ConstructPusherHardMacro
Signed-off-by: Emmanuella Rumanti <amuritna@gmail.com>

--- a/src/mpl2/test/cpp/CMakeLists.txt
+++ b/src/mpl2/test/cpp/CMakeLists.txt
@@ -19,6 +19,10 @@ add_executable(TestSnapper TestSnapper.cpp)
 target_link_libraries(TestSnapper ${TEST_LIBS})
 gtest_discover_tests(TestSnapper WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_executable(TestPusher TestPusher.cpp)
+target_link_libraries(TestPusher ${TEST_LIBS})
+gtest_discover_tests(TestPusher WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_executable(mpl2_test mpl2_test.cc)
 target_link_libraries(mpl2_test 
     gtest 
@@ -32,6 +36,7 @@ gtest_discover_tests(mpl2_test
 add_dependencies(build_and_test
     mpl2_test
     TestSnapper
+    TestPusher
 )
 
 add_subdirectory(helper)
