--- a/.github/workflows/github-actions-changelog.yml
+++ b/.github/workflows/github-actions-changelog.yml
@@ -39,7 +39,8 @@ jobs:
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
           signoff: true
-          branch: example-patches
+          base: master
+          branch: update-chglog
           delete-branch: true
           title: 'Changelog update for ${{ env.MONTH }}/${{ env.YEAR }}'
           body: |
