--- a/src/odb/test/cpp/CMakeLists.txt
+++ b/src/odb/test/cpp/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(TestGuide TestGuide.cpp)
 add_executable(TestNetTrack TestNetTrack.cpp)
 add_executable(TestMaster TestMaster.cpp)
 add_executable(TestGDSIn TestGDSIn.cpp)
+add_executable(TestXML TestXML.cpp)
 
 target_link_libraries(OdbGTests odb gtest gmock gtest_main)
 target_link_libraries(TestCallBacks ${TEST_LIBS})
@@ -43,6 +44,7 @@ target_link_libraries(TestGuide ${TEST_LIBS})
 target_link_libraries(TestNetTrack ${TEST_LIBS})
 target_link_libraries(TestMaster ${TEST_LIBS})
 target_link_libraries(TestGDSIn gdsin)
+target_link_libraries(TestXML gdsin)
 
 # FAILING TARGETS
 # add_test(NAME TestLef58Properties COMMAND TestLef58Properties)
