Support for bus ports in odb. Signed-off-by: Andy Fox andy@rushc.com
Signed-off-by: andyfox-rushc <andy@rushc.com>

--- a/src/odb/src/db/CMakeLists.txt
+++ b/src/odb/src/db/CMakeLists.txt
@@ -85,6 +85,7 @@ add_library(db
     dbGroupGroundNetItr.cpp
     # Generator Code Begin cpp
     dbAccessPoint.cpp
+    dbBusPort.cpp
     dbDft.cpp
     dbGCellGrid.cpp
     dbGlobalConnect.cpp
