tap: Adding a further test for ignore_row_orientation
Signed-off-by: gatecat <gatecat@ds0.me>

--- a/src/tap/test/CMakeLists.txt
+++ b/src/tap/test/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_NAMES
     jpeg_gf180
     aes_gf180
     ignore_row_orientation
+    ignore_row_orientation_odd
 )
 
 foreach(TEST_NAME IN LISTS TEST_NAMES)
