Update tsan/ubsan build options
Signed-off-by: Matt Liberty <mliberty@precisioninno.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -200,8 +200,11 @@ add_compile_options(
   $<$<BOOL:${ASAN}>:-fsanitize=address>
   $<$<BOOL:${ASAN}>:-fno-omit-frame-pointer>
   $<$<BOOL:${ASAN}>:-g>
+  $<$<BOOL:${TSAN}>:-fsanitize=thread>
   $<$<BOOL:${TSAN}>:-g>
   $<$<BOOL:${UBSAN}>:-fsanitize=undefined>
+  $<$<BOOL:${UBSAN}>:-g>
+  $<$<BOOL:${UBSAN}>:-fno-omit-frame-pointer>
 )
 
 if (ASAN)
