pdn: Add -stop_at_endcaps to limit stripes to endcap power pins
Signed-off-by: gatecat <gatecat@ds0.me>

--- a/src/pdn/test/CMakeLists.txt
+++ b/src/pdn/test/CMakeLists.txt
@@ -93,6 +93,7 @@ set(TEST_NAMES
     repair_vias
     sroute_test
     bpin_removal
+    stop_at_endcaps
 )
 
 foreach(TEST_NAME IN LISTS TEST_NAMES)
