odb: undo for dbInst & dbNet create & destroy
Signed-off-by: Matt Liberty <mliberty@precisioninno.com>

--- a/src/odb/test/CMakeLists.txt
+++ b/src/odb/test/CMakeLists.txt
@@ -36,6 +36,7 @@ set(TEST_NAMES
     gcd_abstract_lef_with_power
     abstract_origin
     write_macro_placement
+    undo
 )
 
 foreach(TEST_NAME IN LISTS TEST_NAMES)
