odb: add dbPBox to hold polygons
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/odb/src/db/CMakeLists.txt
+++ b/src/odb/src/db/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(db
     dbInstShapeItr.cpp 
     dbTransform.cpp 
     dbITermShapeItr.cpp 
+    dbPBoxItr.cpp
     dbSWire.cpp 
     dbSBox.cpp 
     dbSWireItr.cpp 
@@ -100,6 +101,7 @@ add_library(db
     dbModNet.cpp
     dbModule.cpp
     dbNetTrack.cpp
+    dbPBox.cpp
     dbPowerDomain.cpp
     dbPowerSwitch.cpp
     dbScanChain.cpp
