Customized generated iterator for ports on a module. Signed-off-by: Andy Fox <andy@rushc.com>
Signed-off-by: andyfox-rushc <andy@rushc.com>

--- a/src/odb/src/db/CMakeLists.txt
+++ b/src/odb/src/db/CMakeLists.txt
@@ -142,6 +142,7 @@ add_library(db
     dbModuleModNetItr.cpp
     dbModuleModNetModBTermItr.cpp
     dbModuleModNetModITermItr.cpp
+    dbModulePortItr.cpp
     dbNetTrackItr.cpp
     dbRegionGroupItr.cpp
     # Generator Code End cpp
