odb: rename dbPBox to dbPolygon
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/odb/src/db/CMakeLists.txt
+++ b/src/odb/src/db/CMakeLists.txt
@@ -36,7 +36,7 @@ add_library(db
     dbInstShapeItr.cpp 
     dbTransform.cpp 
     dbITermShapeItr.cpp 
-    dbPBoxItr.cpp
+    dbPolygonItr.cpp
     dbSWire.cpp 
     dbSBox.cpp 
     dbSWireItr.cpp 
@@ -102,7 +102,7 @@ add_library(db
     dbModNet.cpp
     dbModule.cpp
     dbNetTrack.cpp
-    dbPBox.cpp
+    dbPolygon.cpp
     dbPowerDomain.cpp
     dbPowerSwitch.cpp
     dbScanChain.cpp
