dft: refactor clock domain
Now we don't force dependencies on scan architect when using ClockDomain

Signed-off-by: Felipe Garay <fgaray@google.com>

--- a/src/dft/src/architect/CMakeLists.txt
+++ b/src/dft/src/architect/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_libraries(dft_architect_lib
   PRIVATE
     dft_base_scan_cell_lib
     dft_clock_domain_lib
+    dft_clock_domain_hash_lib
     dft_config_lib
     dft_utils_scan_pin_lib
 )
