--- a/.github/workflows/github-actions-build-deb-package.yml
+++ b/.github/workflows/github-actions-build-deb-package.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['debian10', 'debian11', 'ubuntu20.04', 'ubuntu22.04']
+        os: ['debian11', 'ubuntu20.04', 'ubuntu22.04']
     runs-on: ubuntu-latest
     container:
       image: openroad/${{ matrix.os }}-dev
