gpl: CMakeList: Add message with OR-Tools location and version
Signed-off-by: Eryk Szpotanski <eszpotanski@antmicro.com>

--- a/src/gpl/CMakeLists.txt
+++ b/src/gpl/CMakeLists.txt
@@ -45,6 +45,8 @@ find_package(ortools REQUIRED)
 find_package(LEMON NAMES LEMON lemon REQUIRED)
 find_package(OpenMP REQUIRED)
 
+message(STATUS "Found OR-Tools: ${ortools_DIR} (version: ${ortools_VERSION})")
+
 swig_lib(NAME      gpl
          NAMESPACE gpl
          I_FILE    src/replace.i
