--- a/src/drt/CMakeLists.txt
+++ b/src/drt/CMakeLists.txt
@@ -110,6 +110,7 @@ target_sources(drt
     src/db/obj/frRPin.cpp
     src/db/obj/frNode.cpp
     src/db/obj/frInstTerm.cpp
+    src/db/obj/frNet.cpp
     src/db/tech/frConstraint.cc
     src/db/obj/frMarker.cpp
     src/db/tech/frLayer.cc
