[Docs] OR Review 2 (#4159)
* update os matrix and reorder build instructions to put prebuilt>docker>local
* prototype for tabbed content for openroad APIs
* add sphinx_tabs
* Updated docs requirements.txt
* Now displays OpenROAD APIs nicely.

Signed-off-by: luarss <39641663+luarss@users.noreply.github.com>
Signed-off-by: Vitor Bandeira <vvbandeira@users.noreply.github.com>
Signed-off-by: Song Luar <espsluar@gmail.com>
Co-authored-by: Vitor Bandeira <vvbandeira@users.noreply.github.com>

--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -14,9 +14,11 @@ entries:
   - file: main/src/utl/README
     title: Man pages
 
-- file: main/src/README
+- file: main/README2
   title: OpenROAD User Guide
   entries:
+  - file: main/src/README
+    title: OpenROAD APIs
   - file: main/src/odb/README
     title: Database
     entries:
