grt/rsz: new class for SpefWriter using a map of ostream* instead of ofstream
Signed-off-by: João Mai <joaomai2001@gmail.com>

--- a/src/rsz/src/CMakeLists.txt
+++ b/src/rsz/src/CMakeLists.txt
@@ -49,6 +49,7 @@ add_library(rsz_lib
     RepairHold.cc
     RepairSetup.cc
     Rebuffer.cc
+    SpefWriter.cc
     SteinerTree.cc
     EstimateWireParasitics.cc
     Resizer.cc
