--- a/src/odb/CMakeLists.txt
+++ b/src/odb/CMakeLists.txt
@@ -81,3 +81,22 @@ if(ENABLE_TESTS)
     odb
   )
 endif()
+
+add_custom_command(
+  OUTPUT messages_checked
+  COMMAND ${CMAKE_SOURCE_DIR}/etc/find_messages.py > messages.txt && touch ${CMAKE_CURRENT_BINARY_DIR}/messages_checked
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  DEPENDS
+    db
+    cdl
+    defin
+    defout
+    lefin
+    lefout
+    zutil
+    gdsin
+)
+
+add_custom_target(odb_messages DEPENDS messages_checked)
+
+add_dependencies(odb odb_messages)
