sta: first pass at sta descriptors for inspecting liberty data
Signed-off-by: Matt Liberty <mliberty@precisioninno.com>

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -56,6 +56,7 @@ if (Qt5_FOUND AND BUILD_GUI)
     src/gotoDialog.cpp
     src/inspector.cpp
     src/dbDescriptors.cpp
+    src/staDescriptors.cpp
     src/highlightGroupDialog.cpp
     src/selectHighlightWindow.cpp
     src/staGui.cpp
