--- a/src/odb/src/gdsout/CMakeLists.txt
+++ b/src/odb/src/gdsout/CMakeLists.txt
@@ -1,19 +1,18 @@
-add_library(gdsin
-    gdsin.cpp
-    gdsUtil.cpp
+add_library(gdsout
+    gdsout.cpp
 )
 
-target_include_directories(gdsin
+target_include_directories(gdsout
     PUBLIC
         ${PROJECT_SOURCE_DIR}/include
         ${TCL_INCLUDE_PATH}
 )
-target_link_libraries(gdsin
+target_link_libraries(gdsout
     db
     utl_lib
 )
 
-set_target_properties(gdsin
+set_target_properties(gdsout
   PROPERTIES
     # python requirement
     POSITION_INDEPENDENT_CODE ON
