odb: add dbMarkerGroup/Category and markers
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/odb/src/db/CMakeLists.txt
+++ b/src/odb/src/db/CMakeLists.txt
@@ -105,6 +105,9 @@ add_library(db
     dbIsolation.cpp
     dbLevelShifter.cpp
     dbLogicPort.cpp
+    dbMarker.cpp
+    dbMarkerCategory.cpp
+    dbMarkerGroup.cpp
     dbMetalWidthViaMap.cpp
     dbModBTerm.cpp
     dbModInst.cpp
