Update to tclint 0.4.2
Signed-off-by: Noah Moroze <noahmoroze@gmail.com>

--- a/.github/workflows/github-actions-lint-tcl.yml
+++ b/.github/workflows/github-actions-lint-tcl.yml
@@ -12,9 +12,9 @@ jobs:
 
       - name: Install tclint
         run: |
-          python -m pip install tclint==0.4.1
+          python -m pip install tclint==0.4.2
 
       - name: Lint
         run: |
-          tclfmt --check .
+          tclfmt --in-place .
           tclint --no-check-style .
