Display more information in lint Tcl job
Prints tclint/tclfmt version, and prints formatting diff.

Signed-off-by: Noah Moroze <noahmoroze@gmail.com>

--- a/.github/workflows/github-actions-lint-tcl.yml
+++ b/.github/workflows/github-actions-lint-tcl.yml
@@ -16,5 +16,7 @@ jobs:
 
       - name: Lint
         run: |
+          tclfmt --version
           tclfmt --in-place .
+          git diff --exit-code
           tclint --no-check-style .
