pdn: add check for strap directions in repair channels, to avoid inf loop
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/pdn/test/CMakeLists.txt
+++ b/src/pdn/test/CMakeLists.txt
@@ -62,6 +62,7 @@ set(TEST_NAMES
     macros_cells_overlapping_ports
     macros_cells_not_fixed
     macros_cells_via_failure
+    repair_channel_inf_loop
     region_temp_sensor
     region_secondary_nets
     region_non_rect
