--- a/.github/workflows/github-actions-build-deb-package.yml
+++ b/.github/workflows/github-actions-build-deb-package.yml
@@ -21,10 +21,17 @@ jobs:
         with:
           submodules: true
 
+      - name: Set release version
+        id: set_version
+        run: |
+          echo "RELEASE_VERSION=$(git describe | sed 's/v//')" >> $GITHUB_ENV
+          echo "RELEASE_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
       - name: Build package
         run: |
-          mkdir artifacts
+          ./debian/create-changelog.sh $RELEASE_VERSION
           debuild --preserve-env --preserve-envvar=PATH -B
+          mkdir -p artifacts
           mv ../openroad_* artifacts
 
       - name: Rename artifact
@@ -45,17 +52,13 @@ jobs:
           name: ${{ steps.artifact.outputs.name }}
           path: ${{ steps.artifact.outputs.file }}
 
-      - name: Set release version
-        id: set_version
-        run: echo "RELEASE_VERSION=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-
       - name: Get release info
         uses: cardinalby/git-get-release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: Release ${{ env.RELEASE_VERSION }}
+          release_name: ${{ env.RELEASE_VERSION }}
           doNotFailIfNotFound: true
         id: release_info
 
@@ -66,8 +69,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: Release ${{ env.RELEASE_VERSION }}
-          body: "Release"
+          release_name: ${{ env.RELEASE_VERSION }}
+          body: "Release ${{ env.RELEASE_VERSION }} on ${{ env.RELEASE_DATE }}"
         id: create_release
 
       - name: Upload Release Asset
