etc: add deb release ignores
Signed-off-by: Vitor Bandeira <vvbandeira@precisioninno.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ coverage-output
 .metals/
 
 etc/openroad_deps_prefixes.txt
+
+*debhelper*
+debian/changelog
+debian/files
+debian/openroad
+obj-x86_64-linux-gnu/
