gha: allow git commands to be run
Signed-off-by: Vitor Bandeira <vvbandeira@precisioninno.com>

--- a/.github/workflows/github-actions-build-deb-package.yml
+++ b/.github/workflows/github-actions-build-deb-package.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Set release version
         id: set_version
         run: |
+          git config --global --add safe.directory '*'
           echo "RELEASE_VERSION=$(git describe | sed 's/v//')" >> $GITHUB_ENV
           echo "RELEASE_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
