ora: add basic orassistant api call command
Signed-off-by: Palaniappan R <palaniappan.r.mail@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -308,6 +308,7 @@ add_subdirectory(pdn)
 add_subdirectory(dft)
 add_subdirectory(mpl2)
 add_subdirectory(par)
+add_subdirectory(ora)
 
 ################################################################
 
@@ -371,6 +372,7 @@ target_link_libraries(openroad
   dft
   mpl2
   par
+  ora
   ${ABC_LIBRARY}
   ${TCL_LIBRARY}
   ${CMAKE_THREAD_LIBS_INIT}
