--- a/src/rcx/test/rcx_v2/flow/Makefile
+++ b/src/rcx/test/rcx_v2/flow/Makefile
@@ -14,9 +14,9 @@ run_rcx=$(test_dir)/rcx_v2/flow/scripts/run_rcx.bash
 
 all: options flow
 
-options: gcd_flow_v2_model_v1_no_via_merge gcd_v2_v1_max_res_0 gcd_v2_v1_max_res_0_no_via_merge gcd_v2_v1_max_res_10 gcd_v2_v1_max_res_500
+options: gcd_flow_v2_model_v1_no_via_merge gcd_v2_v1_max_res_0 gcd_v2_v1_max_res_0_no_via_merge gcd_v2_v1_max_res_10 gcd_v2_v1_max_res_500 gcd_v2_v1_lef_rc
 
-flow: gcd_flow_v2_model_v2 gcd_flow_v2_model_v1 gcd_flow_v1_model_v2 gcd_flow_v1_model_v2_1 ext_patterns_flow_v2_model_v2
+flow: gcd_flow_v2_model_v2 gcd_flow_v2_model_v1 gcd_flow_v1_model_v2 ext_patterns_flow_v2_model_v2
 
 
 gcd_flow_v2_model_v2: 
@@ -28,8 +28,8 @@ gcd_flow_v2_model_v1:
 gcd_flow_v1_model_v2:
 			$(run_rcx) $(or_exec) gcd $@
 
-gcd_flow_v1_model_v2_1:
-			$(run_rcx) $(or_exec) gcd $@
+# gcd_flow_v1_model_v2_1:
+			# $(run_rcx) $(or_exec) gcd $@
 
 ext_patterns_flow_v2_model_v2:
 			$(run_rcx) $(or_exec) patterns $@
@@ -50,5 +50,8 @@ gcd_v2_v1_max_res_0_no_via_merge:
 			$(run_rcx) $(or_exec) options $@
 
 gcd_v2_v1_max_res_500: 
+			$(run_rcx) $(or_exec) options $@
+
+gcd_v2_v1_lef_rc: 
 			$(run_rcx) $(or_exec) options $@
 
