add fasterCap tests

--- a/src/rcx/test/rcx_v2/Makefile
+++ b/src/rcx/test/rcx_v2/Makefile
@@ -9,4 +9,10 @@ flow:
 model:
 	cd $@ ; make patterns
 
+fasterCap:
+	cd FasterCapModel ; make patterns
+
+fasterCap-gen:
+	cd FasterCapModel ; make gen924
+
 
