clean up create RSegs and cap Nodes: makeRCNetwork_v2; create makeNetRCsegs_v2 out of makeNetRCsegs

--- a/src/rcx/src/CMakeLists.txt
+++ b/src/rcx/src/CMakeLists.txt
@@ -77,6 +77,7 @@ extPatterns.cpp
 extRulesVia.cpp
 extmeasure_print.cpp
   extmeasure_res_v2.cpp
+			extmain_v2.cpp
 )
 
 target_include_directories(rcx_lib
