rsz: add rcx object
Signed-off-by: Eder Monteiro <emrmonteiro@precisioninno.com>

--- a/src/rsz/src/CMakeLists.txt
+++ b/src/rsz/src/CMakeLists.txt
@@ -79,6 +79,7 @@ target_link_libraries(rsz_lib
     OpenSTA
     dbSta_lib
     grt_lib
+    rcx_lib
     utl_lib
 )
 
@@ -91,6 +92,7 @@ target_link_libraries(rsz
     dbSta
     grt
     gui
+    rcx
     utl
 )
 
