pad: add bump to bump routing test
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/pad/test/CMakeLists.txt
+++ b/src/pad/test/CMakeLists.txt
@@ -36,6 +36,7 @@ set(TEST_NAMES
     rdl_route_45_with_2port_bump
     rdl_route_45_with_oct_bump
     rdl_route_single_target
+    rdl_route_bump_to_bump_only
     skywater130_overlapping_filler
     skywater130_caravel
     skywater130_coyote_tc
