--- a/src/utl/test/CMakeLists.txt
+++ b/src/utl/test/CMakeLists.txt
@@ -1,10 +1,15 @@
 include("openroad")
 
 set(TEST_NAMES
-test_info
+    test_info
     test_error
     test_suppress_message
     test_metrics
+    logger_max_messages
+    logger_redirection
+    logger_redirection_nonewline
+    tee
+    tee_fails
 )
 
 foreach(TEST_NAME IN LISTS TEST_NAMES)
