--- a/src/rcx/test/rcx_v2/flow/corners/Makefile
+++ b/src/rcx/test/rcx_v2/flow/corners/Makefile
@@ -14,6 +14,9 @@ run_rcx_corners=$(test_dir)/rcx_v2/flow/corners/scripts/run_rcx.bash
 
 all: gcd_3corners gcd_3corners_define_list gcd_3corners_undefined  gcd_corners_0  gcd_corners_0_2  gcd_corners_1  gcd_corners_2  gcd_corners_2_1
 
+v1_gcd_3corners_define_list: 
+			$(run_rcx_corners) $(or_exec) ./ $@
+
 gcd_3corners: 
 			$(run_rcx_corners) $(or_exec) ./ $@
 
