--- a/src/dpl/test/CMakeLists.txt
+++ b/src/dpl/test/CMakeLists.txt
@@ -31,6 +31,8 @@ set(TEST_NAMES
     fillers7
     fillers8
     fillers9
+    fillers2_verbose
+    fillers9_verbose
     fragmented_row01
     fragmented_row02
     fragmented_row03
